syntax = "proto3";
package v1;

enum RESOURCE {
  UNKOWN = 0;
  METRICS = 1;
  TRACES = 2;
  LOGS = 3;
  SAMPLE_ID = 4;
  TRANSLATE_ID = 5;
}
