syntax = "proto3";
package v1;

enum PREFIX {
  RESOURCE_SCHEMA = 0;
  RESOURCE_ATTRIBUTES = 1;
  SCOPE_SCHEMA = 2;
  SCOPE_NAME = 3;
  SCOPE_VERSION = 4;
  SCOPE_ATTRIBUTES = 5;
  NAME = 6;
  ATTRIBUTES = 7;
  TRACE_ID = 8;
  SPAN_ID = 9;
  PARENT_SPAN_ID = 10;
  LOGS_LEVEL = 11;
}

message Sample {
  // Serialized Data object, compressed with zstd. We use bytes here because we
  // automatically sore Sample as a arrow.Record.
  bytes data = 1;

  // Minimum timetamp observed in this sample in milliseconds
  uint64 min_ts = 2;

  // Maximum timestamp observed in this sample in milliseconds
  uint64 max_ts = 3;

  // Date in nillisecond in which the sample was taken
  uint64 date = 4;
}
